# VanderCore

./: .gitignore  .replit  Procfile  README.md  active_users.json  ai_trading_engine.py  automated_signal_generator.py  bot.py  bot_description.md  bot_state.json  chart_analyzer.py  config.py  dashboard.py  dex_connector.py  discord_integration.py  gunicorn_config.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  risk_analyzer.py  security_analyzer.py  sentiment_analyzer.py  signal_processor.py  test_ai_trading.py  test_automated_signal_generator.py  test_chart_analyzer.py  test_market_data.py  test_risk_analyzer.py  test_sentiment_analyzer.py  user_wallets.json  utils.py  wallet_manager.py  webhook_bot.py  wsgi.py
templates/: dashboard.html
