[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.6.3",
    "base58>=2.1.1",
    "ccxt>=4.4.30",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "matplotlib>=3.10.1",
    "pillow>=11.1.0",
    "python-telegram-bot[job-queue]==13.7",
    "pytz>=2025.1",
    "qrcode>=8.0",
    "solana>=0.25.1",
    "solana-sdk>=0.25.6",
    "telegram>=0.0.1",
    "twilio>=9.4.6",
    "requests-cache>=1.2.1",
    "openai>=1.65.3",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "ta>=0.11.0",
    "requests==2.31.0",
    "urllib3<2.0.0",
    "certifi==2023.7.22",
    "python-binance>=1.0.28",
    "mplfinance>=0.12.10b0",
    "textblob>=0.19.0",
    "python-dotenv>=1.0.1",
    "tornado>=6.1",
    "cloudflared>=1.0.0.2",
    "oci>=2.147.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
